[tool.poetry]
name = "tweetbinder-api-docs"
version = "1.0.0"
description = "tweetbinder-api-docs"
authors = ["Devs Tweetbinder <dev@tweetbinder.com>"]
license = "CC BY-NC 4.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-awesome-pages-plugin = "^2.9.2"

[tool.poetry.group.dev.dependencies]
Markdown = "^3.3.6"
mkdocs = "^1.2.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-material = {extras = ["imaging"], version = "^9.5.4"}
mkdocs-material-extensions = "^1.2"
mkdocs-pandoc = "^0.2.6"
pymdown-extensions = "^10.3"
python-slugify = "^8.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
